# pysoa

./: .arclint  .codeclimate.yml  .dockerignore  .flake8  .gitignore  .pep8  .readthedocs.yml  .sonarcloud.properties  .travis.yml  CHANGELOG.rst  CHANGELOG.txt  CONTRIBUTING.rst  Dockerfile  Makefile  NOTICE  README.md  README.rst  conftest.py  functional.sh  lint.sh  mypy.ini  setup.cfg  setup.py  tasks.py  test.sh  tox.ini  tox.sh
client/: setup.py
client/client/: client.py
common/: setup.py
common/soacommon/: serializer.py
docs/: api.rst  conf.py  index.rst  protocol.rst  reference.rst  roadmap.rst  testing.rst  update_reference_docs.py  update_test_plan_docs.sh
docs/_templates/: related_projects.html
pysoa/: __init__.py  py.typed  typing_patches.py  utils.py  version.py
pysoa-client/: README.md  setup.py
pysoa-common/: setup.py
pysoa-common/soacommon/: transport.py  version.py
pysoa-server/: setup.py
pysoa-server/soaserver/: constants.py  errors.py  schemas.py  server.py  types.py
pysoa-server/soaserver/internal/: types.py
pysoa-server/tests/: test_schemas.py
pysoa-server/tests/test_server/: test_configuration.py  test_process_job.py
pysoa/client/: __init__.py  client.py  errors.py  expander.py  middleware.py  router.py  settings.py
pysoa/common/: compatibility.py  constants.py  errors.py  logging.py  metrics.py  schemas.py  settings.py  transport.py  types.py
pysoa/common/serializer/: __init__.py  base.py  errors.py  exceptions.py  json_serializer.py  msgpack_serializer.py
pysoa/common/transport/: __init__.py  base.py  errors.py  exceptions.py  local.py
pysoa/common/transport/asgi/: __init__.py  client.py  constants.py  core.py  server.py  settings.py  utils.py
pysoa/common/transport/redis_gateway/: client.py  constants.py  core.py  server.py  settings.py  utils.py
pysoa/server/: README.md  __init__.py  action.py  autoreload.py  coroutine.py  errors.py  logging.py  middleware.py  schemas.py  server.py  settings.py  standalone.py  types.py
pysoa/server/action/: __init__.py  base.py  introspection.py  status.py  switched.py
pysoa/server/django/: cache.py  database.py
pysoa/server/internal/: event_loop.py  types.py
pysoa/test/: assertions.py  compatibility.py  factories.py  pytest_fixtures.py  server.py  stub_service.py
pysoa/test/plan/: __init__.py  errors.py  parser.py
pysoa/test/plan/grammar/: __init__.py  assertions.py  data_types.py  directive.py  tools.py
pysoa/test/plugins/: fixtures.py  pytest.py
pysoa/test/plugins/pytest/: fixtures.py  plans.py
server/: setup.py
tests/: fixtures.py  test_utils.py
tests/client/: test_expander.py  test_expansions.py  test_send_receive.py
tests/client_tests/: test_expander.py  test_expansions.py  test_router.py  test_send_receive.py
tests/common/: test_logging.py  test_schemas.py  test_serializers.py  test_settings.py  test_test.py
tests/common/transport/redis_gateway/: test_client.py  test_core.py  test_server.py  test_threading.py
tests/common_tests/: test_serializers.py  test_settings.py  test_test.py
tests/common_tests/transport/: test_asgi_transport.py
tests/common_tests/transport/redis_gateway/: test_client.py  test_core.py  test_server.py
tests/functional/: __init__.py  conftest.py  test_fail.py  test_forking_and_reloading.py  test_redis_sentinel_failover.py  test_send_receive.py  test_very_large_responses.py  test_yyy_forking_and_reloading.py  test_zzz_redis_sentinel_failover.py
tests/functional/docker/: Dockerfile-mysql  Dockerfile-redis  Dockerfile-redis-sentinel  Dockerfile-service  Dockerfile-test  docker-compose.yaml
tests/functional/run/: .coveragerc  .gitignore
tests/integration/: test_expansions.py  test_send_receive.py
tests/server/: test_autoreloader.py  test_logging.py  test_schemas.py  test_standalone.py  test_types.py
tests/server/action/: test_base.py  test_introspection.py  test_status.py  test_switched.py
tests/server/internal/: test_event_loop.py
tests/server/test_server/: test_configuration.py  test_handle_next_request.py  test_process_job.py
tests/server_tests/: test_actions.py  test_schemas.py  test_standalone.py
tests/server_tests/action/: test_status.py
tests/server_tests/test_server/: test_configuration.py  test_process_job.py
tests/test/: test_assertions.py  test_fixtures.py  test_stub_service.py
tests/test/plan/: test_001_fixtures_work.py  test_002_plugin_stats.py  test_parser.py  test_plan_execution_errors.py
tests/unit/: test_utils.py
tests/unit/client/: test_expander.py  test_send_receive.py
tests/unit/common/: test_compatibility_async.py  test_compatibility_threading.py  test_logging.py  test_serializers.py  test_settings.py  test_test.py
tests/unit/server/: test_autoreloader.py  test_schemas.py  test_standalone.py  test_types.py
tests/unit/test/: test_assertions.py  test_fixtures.py  test_server_test_cases.py  test_stub_service.py
(+84 files in other folders)
