[bdist_wheel]
python-tag=py27.py35.py36.py37

[metadata]
license_file = LICENSE

[flake8]
exclude = .git,.env/*,docs/*,build/*,.eggs/*,*.egg-info/*,.tox
max-line-length = 120

[isort]
# Vertical Hanging Indent
multi_line_output = 3
# Formatting settings
line_length = 120
include_trailing_comma = 1
combine_as_imports = 1
force_grid_wrap = 2
use_parentheses = 1
force_sort_within_sections = 1
lines_after_imports = 2
skip=pysoa/test/plan/grammar/directives/__init__.py
skip_glob=*.git/*,*.env/*,*/docs/*,*/build/*,*/.eggs/*,*.egg-info/*
not_skip=__init__.py
# Section ordering
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,CURRENT_PROJECT,LOCALFOLDER,TESTS
no_lines_before=LOCALFOLDER
# Section for third party packages
known_third_party=addict,attr,conformity,currint,dateutil,ddtrace,django,factory,faker,freezegun,gargoyle,msgpack, \
    pytest,pytest_django,pytz,requests,six
# Section for specific project imports
known_current_project=pysoa
known_tests=tests

[aliases]
test=pytest

[tool:pytest]
addopts = -s --junitxml=pytests.xml --cov-fail-under=85 --cov=pysoa
