[bdist_wheel]
python-tag=py27.py35.py36.py37

[metadata]
license_file = LICENSE

[flake8]
exclude = .git,.env/*,docs/*,build/*,.eggs/*,*.egg-info/*,.tox
max-line-length = 120

[isort]
# Vertical Hanging Indent
multi_line_output = 3
# Formatting settings
line_length = 120
include_trailing_comma = 1
combine_as_imports = 1
force_grid_wrap = 2
use_parentheses = 1
force_sort_within_sections = 1
lines_after_imports = 2
skip_glob=*.git/*,*.env/*,*/docs/*,*/build/*,*/.eggs/*,*.egg-info/*
not_skip=__init__.py
add_imports=__future__.absolute_import,__future__.unicode_literals
# Section ordering
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,CURRENT_PROJECT,LOCALFOLDER,TESTS
no_lines_before=LOCALFOLDER
# Section for third party packages
known_third_party=attr,conformity,currint,dateutil,ddtrace,django,factory,faker,freezegun,mockredis,msgpack,py, \
    pyparsing,pytest,pytest_django,pytz,redis,requests,six,_pytest
# Section for specific project imports
known_current_project=pysoa
known_tests=tests

[coverage:run]
branch = true
source = pysoa

[coverage:report]
fail_under = 85
precision = 1
show_missing = true

[aliases]
test = pytest

[tool:pytest]
addopts = -s
