[bdist_wheel]
python-tag=py27.py35.py36.py37.py38

[metadata]
license_file = LICENSE

[flake8]
exclude = .git,.env/*,docs/*,build/*,.eggs/*,*.egg-info/*,.tox
max-line-length = 120

[isort]
# Vertical Hanging Indent
multi_line_output = 3
# Formatting settings
line_length = 120
include_trailing_comma = 1
combine_as_imports = 1
force_grid_wrap = 2
use_parentheses = 1
force_sort_within_sections = 1
lines_after_imports = 2
skip_glob=*.git/*,*.env/*,*/docs/*,*/build/*,*/.eggs/*,*.egg-info/*,.tox,*/tests/functional/services/*
not_skip=__init__.py
add_imports=__future__.absolute_import,__future__.unicode_literals
# Section ordering
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,CURRENT_PROJECT,LOCALFOLDER,TESTS
no_lines_before=LOCALFOLDER
# Section for third party packages
known_third_party=attr,conformity,currint,dateutil,ddtrace,django,factory,faker,freezegun,mockredis,msgpack,py, \
    pymetrics,pyparsing,pytest,pytest_django,pytz,redis,requests,six,_pytest
# Section for specific project imports
known_current_project=pysoa
known_tests=tests

[mypy]
python_version = 3.7
check_untyped_defs = True
[mypy-tasks]
ignore_errors = True
[mypy-__main__.*]
ignore_missing_imports = True
[mypy-aiocontextvars.*]
ignore_missing_imports = True
[mypy-currint.*]
ignore_missing_imports = True
[mypy-django.*]
ignore_missing_imports = True
[mypy-factory.*]
ignore_missing_imports = True
[mypy-freezegun.*]
ignore_missing_imports = True
[mypy-lua.*]
ignore_missing_imports = True
[mypy-mockredis.*]
ignore_missing_imports = True
[mypy-msgpack.*]
ignore_missing_imports = True
[mypy-parameterized.*]
ignore_missing_imports = True
[mypy-py.*]
ignore_missing_imports = True
[mypy-pycountry.*]
ignore_missing_imports = True
[mypy-pyinotify.*]
ignore_missing_imports = True
[mypy-pyparsing.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-_pytest.*]
ignore_missing_imports = True
[mypy-pytz.*]
ignore_missing_imports = True
[mypy-redis.*]
ignore_missing_imports = True
[mypy-setuptools.*]
ignore_missing_imports = True

[coverage:run]
branch = true
source = pysoa

[coverage:report]
fail_under = 86
precision = 1
show_missing = true

[aliases]
test = pytest

[tool:pytest]
addopts = -s
filterwarnings =
    error:.*Coroutine functions are not natively supported.*
    ignore:.*PY_SSIZE_T_CLEAN will be required.*
# The PY_SSIZE_T_CLEAN warning is coming from our test Lua library that is only used in tests and is safe to
#   ignore until Python 3.10. The test Lua library will need to be fixed by that time.
